src/objects/Vendor__c.object
<CustomObject>
    <fields>
        <fullName>Address1__c</fullName>
        <description>Business address line 1</description>
        <inlineHelpText>Business address line 1</inlineHelpText>
        <label>Address1</label>
        <length>254</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <description>Business address line 2</description>
        <inlineHelpText>Business address line 2</inlineHelpText>
        <label>Address2</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>180</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State</description>
        <inlineHelpText>State</inlineHelpText>
        <label>State</label>
        <length>180</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Active = paid subscribed vendor
Inactive = unpaid or choose to de-list
Trial = sign up in a trial period</description>
        <inlineHelpText>Active = paid subscribed vendor
Inactive = unpaid or choose to de-list
Trial = sign up in a trial period</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Describe the vendor type</description>
        <inlineHelpText>Describe the vendor type</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Number__c</fullName>
        <description>Contain auto generate unique Vendor Account Number</description>
        <displayFormat>V{MM}{DD}{000}</displayFormat>
        <label>Vendor Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>Website of vendor</description>
        <inlineHelpText>Website of vendor</inlineHelpText>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Zip code</description>
        <inlineHelpText>Zip code</inlineHelpText>
        <label>Zip Code</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Vendor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validate_Zip</fullName>
        <active>true</active>
        <description>Validate US ZIP code</description>
        <errorConditionFormula>LEN(Zip_Code__c) &gt; 0 &amp;&amp; (Country__c = &quot;United States&quot; || Country__c = &quot;US&quot;) &amp;&amp; VLOOKUP( $ObjectType.ZIP_Code__c.Fields.City__c,  $ObjectType.ZIP_Code__c.Fields.Name, LEFT(Zip_Code__c, 5)) &lt;&gt; City__c</errorConditionFormula>
        <errorDisplayField>Zip_Code__c</errorDisplayField>
        <errorMessage>The ZIP Code you entered is incorrect</errorMessage>
    </validationRules>
</CustomObject>